--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,19 @@
 <div class="container">
   <div class="row my-3">
     <div class="col-4-sm">
-      <ul class="list-group"
-      *ngFor="let month of users | uniqueMonth"
-      (mouseenter)="onFilterUsers(month)"
-      (mouseleave)="onFilterUsers()"
-      >
-        <li class="list-group-item list-group-item-action">{{month}}</li>
+      <ul class="list-group">
+        <li *ngFor="let month of getMonths()"
+        (mouseenter)="onFilterUsers(month.name)"
+        (mouseleave)="onFilterUsers(false)"
+        [appStyle]="month.count"
+        class="list-group-item list-group-item-action">{{month.name}}</li>
       </ul>
     </div>
       <div class="col-6-sm">
-        <ul class="list-group" *ngFor="let user of usersList">
-          <li class="list-group-item list-group-item-action">{{user.fullName}}</li>
+        <ul class="list-group">
+          <li
+              *ngFor="let user of filterUsers"
+              class="list-group-item list-group-item-action">{{user.fullName}}</li>
         </ul>
     </div>
   </div>
